# slacksearch-cli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.codex/skills/slacksearch-cli/: SKILL.md
.codex/skills/slacksearch-cli/agents/: openai.yaml
.github/workflows/: ci.yml
examples/.slacksearch/: slacksearch.jsonc
src/: auth.rs  cli.rs  config.rs  error.rs  main.rs  mock_slack.rs  output.rs  search_query.rs  server.rs  time.rs
src/slack/: client.rs  conversations.rs  mod.rs  search.rs
tests/: mock_server.rs  search_cli.rs
tests/fixtures/: assistant_search_success.json  conversations_list_success.json  legacy_search_success.json  users_list_success.json
