[package]
name = "slacksearch"
version = "0.1.0"
edition = "2024"
description = "CLI foundation for searching Slack messages from the terminal"
license = "MIT"

[dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
chrono = { version = "=0.4.45", default-features = false, features = ["std"] }
dirs = "=6.0.0"
jsonc-parser = { version = "=0.32.4", features = ["serde"] }
reqwest = { version = "=0.13.4", default-features = false, features = ["blocking", "json", "query", "rustls"] }
rpassword = "=7.5.4"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
thiserror = "=2.0.18"

[dev-dependencies]
tempfile = "=3.27.0"
